[tool.poetry]
name = "climbing-disciplines-vis"
version = "0.1.0"
description = "Visualization of crowdsourced information for different climbing disciplines"
authors = ["haokliao <haokliao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipywidgets = "^7.6.3"
seaborn = "^0.11.1"
jupyterlab = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
